--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PH Tube</title>
+
+    <!-- daisy us setup -->
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <header></header>
-    <main></main>
+  <body class="lg:p-20 md:p-10 p-2">
+    <!-- header section -->
+    <header class="pb-3 md:pb-5 lg:pb-10">
+      <div class="flex justify-between">
+        <!-- logo -->
+        <img class="bg-white p-2" src="Logo.png" alt="Logo" />
+        <!-- short btn -->
+        <button id="short_btn" class="btn">Short by view</button>
+        <!-- blog btn -->
+        <button id="blog_btn" class="btn btn-outline btn-error">Blog</button>
+      </div>
+    </header>
+    <hr />
+    <main>
+      <!-- category btn -->
+      <div
+        id="category_btn_container"
+        class="overflow-auto flex justify-center lg:gap-10 md:gap-6 gap-2 mt-6"
+      ></div>
+      <!-- main video  -->
+      <div id="video_field"></div>
+    </main>
     <body></body>
     <script src="js/index.js"></script>
   </body>
