--- a/index.html
+++ b/index.html
@@ -34,9 +34,26 @@
         class="overflow-auto flex justify-center lg:gap-10 md:gap-6 gap-2 mt-6"
       ></div>
       <!-- main video  -->
-      <div id="video_field"></div>
+      <div id="video_field" class="grid grid-cols-4 gap-3">
+        <div class="card w-96 bg-base-100 shadow-xl">
+          <figure>
+            <img
+              src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+              alt="Shoes"
+            />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title">Shoes!</h2>
+            <p>If a dog chews shoes whose shoes does he choose?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <body></body>
-    <script src="js/index.js"></script>
+    <!-- <script src="js/index.js"></script> -->
+    <script src="js/recap.js"></script>
   </body>
 </html>
